--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ logging:
       apache:
         commons:
           dbcp2: WARN  
-  file: /Proyectos/Prueba/JavaWorkSpace/mx.company.code/log/${spring.application.name}.log
+  file: /Proyectos/Prueba/JavaWorkSpace/mx.company.code/log/${spring.application.name}v1.log
   pattern:
     file: '%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%thread] %logger [%file:%line] - %msg%n'
     console: '%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){magenta} %clr(%-5level) %clr([%thread]){blue} %clr(%logger) %clr([%file:%line]) - %msg%n' 
